feat(api-gateway): rollback workspace module
